// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/softkr/grpcx/proto/iot";

package proto;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetProject (ProjectRequest) returns (ProjectReply) {};
  rpc SetFileInfo (SetFileInfoRequest) returns (SetFileInfoReply) {}
  rpc FindSubFile(GetFindFileInfoRequest)returns(GetFindFileInReply){}
  rpc PutFileInfo(PutFileInfoRequest)returns(PutFileInfoReply){}
  rpc DeleteFileInfo (RemoveFileInfoRequest) returns (RemoveFileInfoReply){}
  rpc SubFileCount(SubFileCountRequest)returns(SubFileCountReply){}
}

message ProjectRequest{
  string guid = 1; // guid
}

message ProjectReply{
  int32 status = 1; // 상태코드
  string project = 2; //프로젝트
}

// The request message containing the user's name.
message SetFileInfoRequest {
  string guid = 1;
  string fileName = 2;
  string videoMd5 = 3;
  string subFile = 4; // sclice
}

// The response message containing the greetings
message SetFileInfoReply {
  string message = 1;
}

message GetFindFileInfoRequest{
  string subFile = 1;
}

message GetFindFileInReply{
  string guid = 1;
  string fileName = 2;
  string videoMd5 = 3;
  string subFile = 4;
}

message PutFileInfoRequest{
  string subFile = 1;
}

message PutFileInfoReply{
  int32 subFileCount = 1;
}

message RemoveFileInfoRequest{
  string videoMd5 = 1;
}

message RemoveFileInfoReply{
  string message = 1;
}

message SubFileCountRequest{
  string videoMd5 = 1;
}

message SubFileCountReply{
  int32 message = 1;
}


/**
protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    proto/iot.proto
*/